--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -1,2 +1,16 @@
+<!Doctype html>
 <html>
+<head>
+	<title>ABOUT ME SHIVAM SINGH</title>
+</head>
+<body>
+<h1>My Info</h1>
+<p> I am just a regular Indian kid that goes to <em> Horner Jr. High and is in 8th grade </em>
+	<br> I love all my friends some of my closest friends are <strong> Isaac, Shaurya, Kartik, Pravin, Siddartha, and Vikram </strong>
+</p>
+<h3> I was born on January 5th 2004. I speant 3 yrs in india ages 1-4. I actually won the wildcat run in 1st grade. 
+<em> Dont ask how </em> <br> and I just recently learned the very basics of html which is how im doing this right now </h3>
+<h1><style color:"blue">My Everyday Life</style>  </h1> 
+</body>
+</body>
 </html>
