--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>ABOUT ME SHIVAM SINGH</title>
+	<style>h1 {color:rgb(249, 0, 0);}
+body {background-color:rgb(66, 244, 8);}
+</style>
 </head>
 <body>
 <h1>My Info</h1>
@@ -10,7 +13,7 @@
 </p>
 <h3> I was born on January 5th 2004. I speant 3 yrs in india ages 1-4. I actually won the wildcat run in 1st grade. 
 <em> Dont ask how </em> <br> and I just recently learned the very basics of html which is how im doing this right now </h3>
-<h1><style color:"blue">My Everyday Life</style>  </h1> 
+<h1>My Everyday Life </h1> 
 </body>
 </body>
-</html>
+</html> 
