--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -1,19 +1,31 @@
-<!Doctype html>
+</!DOCTYPE html>
 <html>
-<head>
-	<title>ABOUT ME SHIVAM SINGH</title>
-	<style>h1 {color:rgb(249, 0, 0);}
-body {background-color:rgb(66, 244, 8);}
+<head> 
+<title> All About Me</title>
+	<style> 
+h1 {color: rgb(7, 247, 43);}
+h2 {color: rgb(0,25,255);}
+body{color: rgb(255, 0, 157);}
+body{background-color:rgb(242,255,0); }
 </style>
+
 </head>
 <body>
-<h1>My Info</h1>
-<p> I am just a regular Indian kid that goes to <em> Horner Jr. High and is in 8th grade </em>
-	<br> I love all my friends some of my closest friends are <strong> Isaac, Shaurya, Kartik, Pravin, Siddartha, and Vikram </strong>
-</p>
-<h3> I was born on January 5th 2004. I speant 3 yrs in india ages 1-4. I actually won the wildcat run in 1st grade. 
-<em> Dont ask how </em> <br> and I just recently learned the very basics of html which is how im doing this right now </h3>
-<h1>My Everyday Life </h1> 
+	<h1>The Life of Shivam Singh</h1>
+	<h2>Quick Info About Myself </h2>
+	<p>Just to give you all quick information source about me. Im Shivam Singh a kid who attends Horner Jr. High. <br>
+		I'm in my school's Symphonic Band <strong>the highest level in my school </strong>and over there i play the Euphonium and <br> I absolutely love to play that marvel of an instrument. Also I'm <em>in my school's debate club.</em> I absolutely love to debate and argue <br> that's why I'm a perfect match to be there. <br> I have a loving family. A mother who takes care of all my needs whenever I need something. And always cheers me up when I'm sad. A father who encourages ally may passions <br> and even takes financial responsibilites for all my crazy ideas. I have 2 siblings who are equally annoying but helpful at times<br>So yeah that was some very quick info about my self.</p>
+	<h2> List of all my hobbies </h2>
+	<ol>
+		<li>Debate</li>
+		<li>Symphonic Band</li>
+		<li>Computer Programming</li>
+		<li>Playing Fortnite</li>
+	</ol>	
+	<h2>Friends and Family</h2>
+<p>Now to go over my friend and family. I got 2 parents like everyone else. Then I got 2 really annoying older siblings. One is Riya and the other is Jessica both are equally annoying. <br>My first sibling is the oldest of them all and her name is Riya Singh. She currently works at Apptus and is an engineer <em>(I think).</em>Then we get to my other sibling who currently just started attending college.<br>She started attending uC Berkley and is going to be a cardiologist or Heart surgeon. Then we get to my friends. I have many friends but lets just name a couple. First is Isaac,Kevin, Jason, Shaurya, Pravin, Kartik, Siddhartha, Vikram, and Jongwon. <br>they're all great friends and pretty lit people. </p>
+<h2>Debate</h2>
+<p>Let's go over my faviorate hobby of all time and that is debate. Debate is just amazing I get to just argue with other people and learn real life skills such as public speaking. Which to me sounds absolutely amazing. <br>All while having lots of fun. I've had quite a lot of success in debate. My faviorate tournament was regionals whcih was hosted in Yuba City in California. <br>I've had the most successs in that tournament where we went 3-2 the second best in my school. That was truly one of the best days of my life.  </p>
+
 </body>
-</body>
-</html> 
+</html>
