--- a/myfirstpage.html
+++ b/myfirstpage.html
@@ -6,7 +6,7 @@
 h1 {color: rgb(7, 247, 43);}
 h2 {color: rgb(0,25,255);}
 body{color: rgb(255, 0, 157);}
-body{background-color:rgb(242,255,0); }
+body{background-color:rgb(5, 255, 246); }
 </style>
 
 </head>
